# How_to_optimize_in_GPU

./: CMakeLists.txt
GEMM/: CMakeLists.txt
cmake/: util.cmake
reduce/: CMakeLists.txt  reduce_v0_baseline.cu  reduce_v1_no_divergence_branch.cu  reduce_v2_no_bank_conflict.cu  reduce_v3_add_during_load.cu  reduce_v4_unroll_last_warp.cu  reduce_v5_completely_unroll.cu  reduce_v6_multi_add.cu  reduce_v7_shuffle.cu
